Arreglado Sucursal en Sala y ordenado por los ID